skims\feat(back): #2975.198 draft corrections
Former-commit-id: 4b4f89a507d043d916d0b926438d3bc6c263702d

--- a/skims/static/translations/findings/F031_CWE378.yaml
+++ b/skims/static/translations/findings/F031_CWE378.yaml
@@ -34,9 +34,9 @@ utils.model.finding.enum.F031_CWE378.requirements:
     datos.
 utils.model.finding.enum.F031_CWE378.threat:
   en: >
-    Attacker with local access.
+    Anonymous attacker with local access.
   es: >
-    Atacante con acceso Local.
+    Atacante anónimo con acceso local.
 utils.model.finding.enum.F031_CWE378.title:
   en: FIN.S.031. Excessive privileges - Temporary files
   es: FIN.S.031. Permisos excesivos - Archivos temporales
